[gd_scene load_steps=8 format=3 uid="uid://buqk5q2ynq0ss"]

[ext_resource type="Script" path="res://scene/world/traffic_light/traffic_light_system.gd" id="1_64slh"]
[ext_resource type="Script" path="res://scene/world/traffic_light/traffic_sign_system.gd" id="2_4hdgu"]
[ext_resource type="Texture2D" uid="uid://bfkr8eu1wvgfe" path="res://assets/sprite/env/traffic-padestrian.png" id="3_rpt63"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_778es"]
size = Vector2(512, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stfqd"]
size = Vector2(128, 512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hra4"]
size = Vector2(128, 512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfu17"]
size = Vector2(512, 128)

[node name="traffic_light_system" type="Node2D"]
script = ExtResource("1_64slh")
vahicle_wait_time = 15
padestrian_wait_time = 10

[node name="vahicle_update_counter" type="Timer" parent="."]
wait_time = 5.0

[node name="padestrian_update_counter" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["traffic_light_system"]]
script = ExtResource("2_4hdgu")
index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_778es")

[node name="Label" type="Label" parent="Area2D"]
offset_left = -52.0
offset_top = 76.0
offset_right = 56.0
offset_bottom = 107.0

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(-192, 0)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Area2D"]
position = Vector2(192, 0)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Area2D2" type="Area2D" parent="." groups=["traffic_light_system"]]
script = ExtResource("2_4hdgu")
index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(320, 320)
shape = SubResource("RectangleShape2D_stfqd")

[node name="Label" type="Label" parent="Area2D2"]
offset_left = 133.0
offset_top = 309.0
offset_right = 241.0
offset_bottom = 340.0

[node name="Sprite2D" type="Sprite2D" parent="Area2D2"]
position = Vector2(320, 128)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Area2D2"]
position = Vector2(320, 512)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Area2D3" type="Area2D" parent="." groups=["traffic_light_system"]]
script = ExtResource("2_4hdgu")
index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(-320, 320)
shape = SubResource("RectangleShape2D_2hra4")

[node name="Label" type="Label" parent="Area2D3"]
offset_left = -225.0
offset_top = 307.0
offset_right = -117.0
offset_bottom = 338.0

[node name="Sprite2D" type="Sprite2D" parent="Area2D3"]
position = Vector2(-320, 128)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Area2D3"]
position = Vector2(-320, 512)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Area2D4" type="Area2D" parent="." groups=["traffic_light_system"]]
script = ExtResource("2_4hdgu")
index = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(0, 640)
shape = SubResource("RectangleShape2D_kfu17")

[node name="Label" type="Label" parent="Area2D4"]
offset_left = -56.0
offset_top = 513.0
offset_right = 52.0
offset_bottom = 544.0

[node name="Sprite2D" type="Sprite2D" parent="Area2D4"]
position = Vector2(192, 640)
texture = ExtResource("3_rpt63")
hframes = 2

[node name="Sprite2D2" type="Sprite2D" parent="Area2D4"]
position = Vector2(-192, 640)
texture = ExtResource("3_rpt63")
hframes = 2

[connection signal="timeout" from="vahicle_update_counter" to="." method="_on_vahicle_update_counter_timeout"]
[connection signal="timeout" from="padestrian_update_counter" to="." method="_on_padestrian_update_counter_timeout"]
